fix collection and putFirst